# Ripples

./: .gitignore  LICENCE.txt  README.md  main.py  pixi.toml  pyproject.toml
docs/: audioviz.html  index.html  search.js  wave_derivation.md
docs/audioviz/: audio_processing.html  sources.html  utils.html  visualization.html
docs/audioviz/audio_processing/: audio_processor.html
docs/audioviz/sources/: audio.html  base.html  image_pulse.html  manager.html  synthetic.html
docs/audioviz/utils/: audio_devices.html  guitar_profiles.html  signal_processing.html
docs/audioviz/visualization/: pitch_helix_visualizer.html  ripple_wave_visualizer.html  spectrogram_visualizer.html  visualizer_base.html
docs/exhibitions/: labra.tex
docs/notes/: 2025_07_01-meeting.md  2025_07_02_meeting.md  meeting_template.md
docs/theory/wave_propagator/: wave_derivation.tex
logs/: debug_log.txt
src/audioviz/: engine.py  ripple_ui.py  types.py
src/audioviz/audio_processing/: audio_processor.py
src/audioviz/physics/: wave_propagator.py
src/audioviz/recorder/: base.py  hdf5_chunk_recorder.py
tests/: test_audio_probe_pipeline.py  test_camera_basic.py  test_engine_recording.py  test_full_ripple_integration.py  test_graph_utils.py  test_input_stream.py  test_pose_extractor.py  test_pose_graph_state.py  test_pyqt5.py  test_read_live_audio.py  test_ripple_engine.py  test_ripple_ui.py  test_ripple_visualizer.py  test_ripple_visualizer_3d.py  test_ripple_with_pose_and_synthetic.py  test_wave_propagator_matrix_vs_stencil.py  utils.py
tests/outputs/: audio_devices.json
(+20 files in other folders)
